# movie-app-1

./: README.md  package-lock.json  package.json  tsconfig.app.json
client/: README.md  index.html  package-lock.json  package.json  vite.config.ts
client/movie-app/client/src/app/: App.tsx
client/src/: App.tsx
client/src/api/: movies.ts
client/src/app/: App.tsx
client/src/components/: MovieCard.tsx  MovieForm.tsx  MovieList.tsx
client/src/data/: movies.ts
client/src/hooks/: useMovieCatalog.ts
client/src/styles/: index.css  theme.css
client/src/types/: movie.ts
server/: .gitignore  README.md  config.py  data.py  database.py  db.sqlite  main.py  models.py  parcer.py  pyproject.toml  recommendation.py  result.json  schemas.py  seed.py
src/: App.tsx
src/api/: movies.ts
src/components/: EmptyState.tsx  MovieCard.tsx  MovieFavoritesFilter.tsx  MovieGenreFilter.tsx  MovieList.tsx  MovieSearch.tsx  MovieSort.tsx
src/data/: movies.ts
src/hooks/: useMovieCatalog.ts
src/types/: movie.ts
