[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi[standard]>=0.139.0",
    "pydantic-settings>=2.14.1",
    "sqlalchemy>=2.0.50",
]

[dependency-groups]
dev = [
    "ruff>=0.15.21",
]

[tool.fastapi]
entrypoint = "main:app"
